# autostat

./: README.md  datagen.ipynb  dataguru.ipynb  pyproject.toml  test.ipynb
